--- a/frontend/src/pages/videoPage.scss
+++ b/frontend/src/pages/videoPage.scss
@@ -4,4 +4,11 @@
 
 .video-container {
   width: 100vw;
+  margin-top: 12%;
+}
+
+@media screen and (min-width: 600px) {
+  .video-container {
+    margin-top: initial;
+  }
 }
